app/assets/stylesheets/module-order.form.css.scss
.row--order {
    padding: 20px;
    background-color: #fbfbfb;
    border: 1px solid #eee;
    margin: 0 0 20px;
}
.order-section-heading {
    margin-top: 40px;
}
.label-input-pair {
    margin: 0 0 20px;
}
.input-color-with-optional-part {
    margin-top: 10px;
    margin-left: 20px;
}
.label {
    margin-bottom: 5px;

    &.error {
        color: red;
    }
}
.label .input-checkbox {
    transform: translateY(-1px);
    display: inline-block;
    margin-right: 2px;
}

// .input {
//
// }
// .input-checkbox {
//
// }
// .input-color {
//
// }

.row--fabric-notice {
    background-color: #ffb;
    border-radius: 0;

    box-sizing: border-box;
    transform: translate(-50%, 0);

    position: fixed;
    top: 10%;
    left: 50%;
    width: 90%;
    z-index: 12;

    box-shadow: 0 0 20px #555;
}
@media only screen and (min-width: 768px) {
    .row--fabric-notice {
        width: auto;
    }
}

.row--fabric-notice__btn {
    margin-bottom: 0;
}

.row--submit {
    margin-top: 40px;
}

.handmade_label {
    display: block;
    background: transparent image-url('scissors.png') no-repeat;
    text-transform: lowercase;
    text-align: center;
    text-indent: -19px;
    width: 121px;
    height: 42px;
    line-height: 67px;
    margin-bottom: 10px;
}

.woah {
    padding: 1px;
    background-color: #ff9;
    line-height: 1.4;
}

